# dsc_basics

./: .gitignore  README.md  environment.yml  pyproject.toml
.continue/docs/: new-doc.yaml
db/: data.json  db_cluster-18-11-2024@16-17-08.backup
notebooks/: 1. numpy.ipynb  2. pandas.ipynb  3. matplotlib.ipynb  4. seaborn.ipynb  real_project.ipynb
notebooks/Curso_Manipulacion_de_Datos_con_Pandas/1.Comenzando_con_Pandas/: 1.Primeros_pasos.ipynb  2.Series.ipynb  3.DataFrames.ipynb  4.Guardar_y_Leer_archivos.ipynb
notebooks/Curso_Manipulacion_de_Datos_con_Pandas/2.Funcionalidades_Basicas/: 1.Tipos_de_variables_DF.ipynb
