[tool.poetry]
name = "basics"
version = "0.1.0"
description = "learning dsc"
authors = ["fgbyte <fer.garciabayon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.1,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
openpyxl = ">=3.1.5,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.6.1,<2.0.0"
fastparquet = "^2024.11.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
